finished user json and fixed css to stop jumping of map

--- a/rootlessme/web/css/ride.css
+++ b/rootlessme/web/css/ride.css
@@ -233,11 +233,9 @@ tbody {
 }
 
 .fixed #middleContent {
-	margin-top: 120px;
-}
-
-.fixed #leftColumn {
-	float: none;
+	margin-left: 19px;
+	float: left;
+	margin-top: 280px;
 }
 
 #informationContainer {
